
1.4.0 ()
- CL-3  clog; nested include files
        (thanks to David Patrick).

------ current release ---------------------------

1.3.0 (2016-06-27) 98b53f0142ce85725d83a6fad0091f7f92b6269d
- CL-10 The suppress context doesn't suppress the newline character
        (thanks to Cory Donnelly).
- CL-12 Overlapping rules are not respected
        (thanks to P4).
- Converted to C++11.
- Improved compliance to CppCoreGuidelines.
- Integrated libshared.git, code-sharing across Taskwarrior products.

------ old releases ------------------------------

1.2.1 (2015-10-12) 33c912809e13f24801d273614f9d6dfc14b1ef41
- CL-8 clog 1.2.0 fails to build
       Thanks to Rainer Müller

1.2.0 (2015-09-26) 48719a21fda4e29113ce8b1aa29a568f073f0e65
- TW-1296 make test/run_all exit with non-zero code if a test fail (thanks to
          Jakub Wilk).
- Fixed bug whereby blank input lines always got eaten (thanks to vkrishn).
- Updated URLs.

1.1.0 (2013-09-10) 3feae394c0407954e7eb345ffdcc29ae09e23ba6
- Supports action 'blank' that adds a preceding and following blank line to a
  match.

1.0.0 (2012-08-05)
- Supports regular expressions and text strings.
- Supports multiple rulesets in different sections of ~/.clogrc.
- Supports adding date- or time-stamps to each line.
- Supports colorizing lines or patterns.
- Supports suppression of lines.
- Has clog.1 man page.
- Uses cmake build system.

Project started September 22, 2010.

------ start -----------------------------------
