@@ -8,6 +8,8 @@ The following submitted code, packages or analysis, and deserve special thanks:
 
   John West
   Jakub Wilk
+  Jörg Krause
+  Ben Boeckel
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
@@ -18,3 +20,4 @@ suggestions:
   Cory Donnelly
   P4
   David Patrick
+  hosaka
